kustomize/components/redis/redis.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: quay-redis
  labels:
    quay-component: redis
  annotations:
    component: "redis"
spec:
  ports:
    - port: 6379
      protocol: TCP
  selector:
    quay-component: redis
